Fixed a couple of small things - movies with too many watch providers have an overflow now set + Logos on CastPage are limited to a max size to prevent unwanted overflow

--- a/frontend/src/components/MovieProviders/MovieProviders.css
+++ b/frontend/src/components/MovieProviders/MovieProviders.css
@@ -1,5 +1,6 @@
 .provider-container {
     display: flex;
+    overflow-x: auto;
 }
 
 .provider-height {
